syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hmproductions.theredstreet";
option java_outer_classname = "DalalService";

package helloworld;

// The greeting service definition.
service Dalal {
    // Sends a greeting
    rpc SayStock (StockRequest) returns (StockReply) {}
}

// The request message containing the user's name.
message StockRequest {
    string name = 1;
}

// The response message containing the greetings
message StockReply {
    string message = 1;
}